--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="dist/basicLightbox.min.css" />
     <link
       href="../node_modules/@pnotify/core/dist/PNotify.css"
       rel="stylesheet"
@@ -23,5 +24,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
   </body>
 </html>
